--- a/site/module2-solution/css/style.css
+++ b/site/module2-solution/css/style.css
@@ -1,31 +1,89 @@
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
-  margin-bottom: 15px;
+  text-align: center;
+  padding: 40px;
+  font-size: 1.75em;
 }
 
-p {
-  border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+div#margin {
+  border: solid 10px;
+  border-color: #ffffff;
+  position: relative;
+}
+div#container {
+  background-color: #999999;
+  border: solid 1px;
+  border-color: #000000;
+}
+.topcorner1{
+  position:absolute;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  top:0;
+  right:0;
+  border: solid 1px;
+  border-color: #000000;
+  background-color: #ff9962;
+  font-size: 1.25em;
+  width: 100px;
+}
+.topcorner2{
+  position:absolute;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  top:0;
+  right:0;
+  border: solid 1px;
+  border-color: #000000;
+  background-color: #9e0508;
+  font-size: 1.25em;
+  color: #ffffff;
+  width: 100px;
+}
+.topcorner3{
+  position:absolute;
+  padding-top: 3px;
+  padding-bottom: 3px;
+  padding-left: 20px;
+  padding-right: 20px;
+  text-align: center;
+  top:0;
+  right:0;
+  border: solid 1px;
+  border-color: #000000;
+  background-color: #f9df18;
+  font-size: 1.25em;
+  width: 100px;
+}
+p{
+  padding-top: 35px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 100%;
 }
 
 /* Simple Responsive Framework. */
 .row {
-  width: 100%;
+  width: 98%;
+  margin: auto; /* horizontally center a block element */
 }
 
 /********** Large devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -69,7 +127,6 @@ p {
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     float: left;
-    border: 1px solid green;
   }
   .col-md-1 {
     width: 8.33%;
