--- a/site/module3-solution/css/styles.css
+++ b/site/module3-solution/css/styles.css
@@ -1,3 +1,6 @@
+body { 
+  padding-top: 50px; /* The fixed navbar will overlay your other content, unless you add padding to the top of the <body>.*/
+}
 #nav-list {
   margin-top: 10px;
 }
